2013-05-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/stm8/ralloc.c,
	  support/regression/tests/gcc-torture-execute-20010129-1.c,
	  support/regression/tests/gcc-torture-execute-pr28982a.c,
	  support/regression/tests/gcc-torture-execute-930614-2.c,
	  support/regression/tests/gcc-torture-execute-20021120-1.c:
	  Support for calls to functions returning long from functions that use extended stack.

2013-05-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc2.cc,
	  src/stm8/ralloc.c,
	  src/stm8/gen.h,
	  src/stm8/gen.c,
	  support/regression/tests/bp.c,
	  support/regression/tests/gcc-torture-execute-20071030-1.c,
	  support/regression/tests/gcc-torture-execute-990513-1.c,
	  support/regression/tests/gcc-torture-execute-pr47538.c,
	  support/regression/tests/gcc-torture-execute-980707-1.c,
	  support/regression/tests/bug2094505.c,
	  support/regression/tests/gcc-torture-execute-20031012-1.c,
	  support/regression/tests/gcc-torture-execute-20030916-1.c:
	  Support for extended stack on stm8, more efficient ADDRESS_OF.

2013-05-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient pointer access, more efficient loading of constants to stack, fix handling of shift count deadness.
	* sim/ucsim/stm8.src/inst.cc:
	  Fix ldw pointer write (bug #2174).
	* support/regression/tests/gcc-torture-execute-pr47538.c:
	  Disable volatile test affected by bug #2171.
	* src/stm8/ralloc2.cc:
	  Implement heuristic bias for register assignment.

2013-05-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient zeroing by pointer, more efficient unsigned cast, preparations for more efficient pointer access.
	* src/SDCCopt.c:
	  Allow offset in pointer read.
	* sim/ucsim/stm8.src/inst.cc:
	  Fix handling of N and Z flag in ldw.
	* src/stm8/main.c:
	  More efficient initialization.

2013-05-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient addition.
